--- a/src/PSI.TI.GestaoEscolar.Data/PSI.TI.GestaoEscolar.Data.csproj
+++ b/src/PSI.TI.GestaoEscolar.Data/PSI.TI.GestaoEscolar.Data.csproj
@@ -12,6 +12,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.sqlserver" Version="3.1.8" />
+    <PackageReference Include="microsoft.entityframeworkcore.tools" Version="3.1.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
