--- a/src/PSI.TI.GestaoEscolar.MVC/PSI.TI.GestaoEscolar.MVC.csproj
+++ b/src/PSI.TI.GestaoEscolar.MVC/PSI.TI.GestaoEscolar.MVC.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\PSI.TI.GestaoEscolar.Data\PSI.TI.GestaoEscolar.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
